@@ -1,3 +1,7 @@
+2011-03-31  Tristan Gingold  <gingold@adacore.com>
+
+	* makefile.vms (DEBUG_OBJS): Add elfcomm.obj.
+
 2011-03-31  Bernd Schmidt  <bernds@codesourcery.com>
 
 	* readelf.c (get_symbol_index_type): Handle SCOM for TIC6X.
