@@ -1,3 +1,7 @@
+2011-03-31  Tristan Gingold  <gingold@adacore.com>
+
+	* makefile.vms (OBJS): Add filename_cmp.obj
+
 2011-02-28  Kai Tietz  <kai.tietz@onevision.com>
 
 	* filename_cmp.c (filename_ncmp): New function.
